samples/_failures_safe/1761447485_6f348d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_586fd180.c: In function ‘main’:
./samples/SAFE/__tmp_586fd180.c:173:5: error: expected declaration or statement at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_586fd180.c:173:5: error: expected declaration or statement at end of input
